# android-adb-backup-desktop

./: .gitignore  AndroidBackupDesktop.spec  README.md  launcher.py  pyproject.toml
.github/workflows/: build-windows.yml
src/android_backup_desktop/: __init__.py  adb.py  backup.py  gui.py  models.py
tests/: test_backup_restore_security.py  test_cancel_and_performance.py  test_none_handling.py  test_parsers.py
