[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "android-backup-desktop"
version = "0.1.0"
description = "Windows desktop Android app backup tool powered by ADB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7",
]

[project.optional-dependencies]
apk-labels = ["apkutils2>=1.0.0"]
dev = ["pytest>=8.0"]

[project.scripts]
android-backup-desktop = "android_backup_desktop.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
